<resources>
    <string name="app_name">BasketballScore</string>
    <string name="textview1">TeamA</string>
    <string name="textview2">TeamB</string>
    <string name="SocreA">0</string>
    <string name="SocreB">0</string>
    <string name="button1">+1</string>
    <string name="button2">+2</string>
    <string name="button3">+3</string>
    <string name="undoButton">undo</string>
    <string name="resetButton">reset</string>
</resources>